@@ -983,7 +983,7 @@ class HtmlContentUtils(object):
             iconText, addClass = self.__getIconAnchorAndClass(contentIconType="deposit-info", cssClass="pull-right")
             self.__html.beginContainer(cType="row")
             self.__html.beginPanel("Additional Descriptive Information for Depositors " + iconText, style="panel-default " + addClass, fmt="html")
-            ht = self.__mU.getFormatted(description, wrapper="pre", fmt="none")
+            ht = self.__mU.getFormatted(altDescription, wrapper="pre", fmt="none")
             self.__html.addContent([ht])
             self.__html.endPanel()
             self.__html.endContainer()
@@ -1183,7 +1183,7 @@ class HtmlContentUtils(object):
             iconText, addClass = self.__getIconAnchorAndClass(contentIconType="deposit-info", cssClass="pull-right")
             self.__html.beginContainer(cType="row")
             self.__html.beginPanel("Additional Descriptive Information for  Depositors " + iconText, style="panel-default " + addClass, fmt="html")
-            ht = self.__mU.getFormatted(description, wrapper="pre", fmt="none")
+            ht = self.__mU.getFormatted(altDescription, wrapper="pre", fmt="none")
             self.__html.addContent([ht])
             self.__html.endPanel()
             self.__html.endContainer()
