@@ -2,6 +2,6 @@ __docformat__ = "restructuredtext en"
 __author__ = "John Westbrook"
 __email__ = "john.westbrook@rcsb.org"
 __license__ = "Apache 2.0"
-__version__ = "0.25"
+__version__ = "0.26"
 
 __apiUrl__ = "https://mmcif.wwpdb.org"
