@@ -6,3 +6,4 @@
  1-Jan-2021  V0.23 - Handle missing categories in extension dictionaries within category images.
  1-Jan-2021  V0.24 - Add NX_Mapping details for cif_img.dic
 10-Jan-2023  V0.25 - Configuration changes to support tox 4, graphviz env variable for testing
+06-Feb-2024  V0.26 - Properly render pdbx_item_description.
